# syrinx

./: .gitignore  AUTHORS  LICENSE  README.md  branches.toml  build.py  check_sitemap.py  preprocess.py  pyproject.toml  requirements.txt  run_dev.py
.github/workflows/: publish.yml  test.yml  testbuild.yml
meta/: branches.toml  syrinx.cfg
meta/content/: branches.cfg  index.md
meta/theme/assets/css/: index.css
meta/theme/defaults/: icon_button.jinja2  index.jinja2  master.jinja2  section.jinja2
meta/theme/templates/: master.jinja2  root.jinja2
scaffolds/blog-webawesome/: README.md  requirements.txt  scaffold.json  syrinx.cfg
scaffolds/blog-webawesome/.github/workflows/: deploy.yml
scaffolds/blog-webawesome/content/: index.md
scaffolds/blog-webawesome/content/blog/lucid-slate/project-launch/: index.md
scaffolds/blog-webawesome/theme/assets/css/: index.css
scaffolds/blog-webawesome/theme/templates/: master.jinja2  page.jinja2
scaffolds/project-webawesome/: .gitignore  README.md  branches.toml  scaffold.json  syrinx.cfg
scaffolds/project-webawesome/content/: feature-1.md  feature-2.md  feature-3.md  index.md
scaffolds/project-webawesome/content/about/: index.md  value-1.md  value-2.md
scaffolds/project-webawesome/content/contact/: index.md
scaffolds/project-webawesome/content/cta/: index.md
scaffolds/project-webawesome/content/features/: feature-3.md  index.md
scaffolds/project-webawesome/content/news/: index.md  news-1.md  news-2.md
scaffolds/project-webawesome/content/newsletter/: index.md
scaffolds/project-webawesome/content/services/: index.md  service-1.md  service-2.md
scaffolds/project-webawesome/theme/assets/css/: index.css  style.css
scaffolds/project-webawesome/theme/templates/: _cta.jinja2  _feature_card.jinja2  _news_card.jinja2  _newsletter.jinja2  _section.jinja2  master.jinja2  page.jinja2  root.jinja2
syrinx/: branches.py  build.py  cli.py  config.py  dev_server.py  exceptions.py  node.py  postprocess.py  preprocess.py  read.py  run.py  scaffold.py  sitemap.py
syrinx/server/: __init__.py  dev_server.py  hot_reload_handler.py  rebuild_handler.py  reload_outdated.js
tests/: branches.py  build.py  build_node.py  config.py  content_node.py  node.py  node_lastmodified.py  process.py  read.py  requirements.txt  sitemap.py
