[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syrinx"
version = "0.0.2"
authors = [
  { name="Jasper van den Bosch"},
]
description = "Simple static site generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2 >= 3.1",
    "markdown >= 3.5.1",
]

[project.scripts]
syrinx = "syrinx.cli:main"

[project.urls]
Homepage = "https://github.com/ilogue/syrinx"
Issues = "https://github.com/ilogue/syrinx/issues"
