[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "syrinx"
version = "0.1.2"
authors = [
  {name="Jasper van den Bosch"},
  {name="Dan Brady"},
]
license = "MIT"
license-files = ["LICENSE", "AUTHORS"]
description = "Simple static site generator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[project.scripts]
syrinx = "syrinx.cli:main"

[project.urls]
Homepage = "https://github.com/ilogue/syrinx"
Issues = "https://github.com/ilogue/syrinx/issues"

[tool.setuptools.packages.find]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "*.py"